Incluindo um paragrafo

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="ÜTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="view-port" content="width=device-width, initial-scale=1.0">
-    <title>Teste</title>
+    <title>Teste Título</title>
 </head>
 <body>
-    <h1>Olá mundo!</h1>    
+    <h1>Olá mundo!</h1>
+    <h2>Aqui é meu primeiro git!</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quasi odit perferendis! Nihil eum, architecto, 
+        libero dicta porro ipsa distinctio in aspernatur ipsum ut laudantium quis veritatis eius dolore? Numquam.</p> 
 </body>
 </html>
